 * Export and Merge operations are now done with low priority threads, reducing the impact on the responsiveness of the rest of the system
   PLEASE NOTE: this does mean that if you start other resource intensive programs while WorldPainter is Exporting or Merging, those programs will take precedence and delay the Export or Merge operation
 * Directional lighting can now be turned off. This has been implemented by adding a fifth direction: "from above", which you can select by pressing "rotate left" once when "north west" (the default) is selected, or "rotate right" when "south west" is selected
 * High resolution display support on Windows. WorldPainter now should use the full resolution of your high resolution (more than 120 dpi) display instead of scaling everything up two times on Windows. It's not perfect yet, so please let us know of any visual problems on high resolution displays. Note that as a result, visual themes are unfortunately no longer supported for high resolution displays on Windows

-- Version 2.3.6, released 5-1-2017

 * Bug fix: make working with Combined Layers work again without crashing WorldPainter
 * Bug fix: since version 2.3.0, when editing multiple Custom Objects at once, WorldPainter has been resetting the offsets to zero. This has now been fixed

-- Version 2.3.5, released 4-1-2017

 * Should be more robust at loading combined layers that had previously been affected by a custom terrain related bug. Such layers, and worlds containing them, should now load without crashing WorldPainter, but the custom terrains from them might be lost. WorldPainter will inform you if that happens
 * Bug fix: correctly interpret the layer intensities for Custom Underground Pockets layers