@@ -2,6 +2,8 @@
 
  * There are two new selection modification operations on the Global Operations tool screen: "add to selection" and "remove from selection" which together with the filter settings allows you to sculpt complex and intricate selections based on the contents of the world
  * It is now possible to hide the terrain type and the fluids (water and lava), or show *just* the terrain, hiding all layers. This is done with the new checkboxes on the Terrain panel. Deselecting "Show Terrain" will turn the surface entirely grey, hiding the terrain type and making layers easier to see. Selecting "Solo Terrain" will hide all layers. And deselecting "Show Water/Lava" will remove all water and lava from view, making it easier to see river, lake and ocean beds. Just as with the other "show" checkboxes: whenever the corresponding tool or paint is selected the layer *will* be shown, regardless of the checkbox setting. In other words: when you have the Flood or Lava tools selected the fluids will always be shown, and whenever you have any terrain type selected the terrain will always be shown
+ * The four terrain shaping operations (Height, Flatten, Smooth and Raise Mountain) now have an option on the Tool Settings panel: "Apply theme". When enabled (which is the default only for Raise Mountain), applying the operation will also reset the terrain type to the theme (the default terrain settings), as well as apply or remove any layers contained in the theme (such as the Frost layer by default)
+   + Applying the theme now will also remove layers, where it would previously only add them. This only applies to the layers actually contained in the theme (by default this is only the Frost layer). Applying the theme happens when the new "Apply theme" tool setting is active, or the "reset terrain and layers to theme" operation on the Global Operations screen is used, or when right-clicking with a painting tool selected and a terrain type as the active paint
  * Export and Merge operations are now done with low priority threads, reducing the impact on the responsiveness of the rest of the system
    PLEASE NOTE: this does mean that if you start other resource intensive programs while WorldPainter is Exporting or Merging, those programs will take precedence and delay the Export or Merge operation
  * Directional lighting can now be turned off. This has been implemented by adding a fifth direction: "from above", which you can select by pressing "rotate left" once when "north west" (the default) is selected, or "rotate right" when "south west" is selected
